--- a/Webdoc_Output/Period/Period.html
+++ b/Webdoc_Output/Period/Period.html
@@ -315,17 +315,17 @@ obs. time interval:  <span class="stres">(origin, finmdy]</span>
      +------------------------------------------------+
      | <span class="stres">  diagmdy      finmdy    _t0     _t   _d   _st </span>|
      |------------------------------------------------|
-  1. | <span class="stres">17jun1971   31dec2003   3486   5311    0     1 </span>|
-  2. | <span class="stres">21jun1971   11jul1974      .      .    .     0 </span>|
-  3. | <span class="stres">15jan1971   13nov1972      .      .    .     0 </span>|
-  4. | <span class="stres">01jan1971   12mar1981   3653   3723    1     1 </span>|
-  5. | <span class="stres">18may1971   24jul1977      .      .    .     0 </span>|
+  1. | <span class="stres">24aug1971   02nov1971      .      .    .     0 </span>|
+  2. | <span class="stres">03dec1971   06sep1974      .      .    .     0 </span>|
+  3. | <span class="stres">15nov1971   22nov1972      .      .    .     0 </span>|
+  4. | <span class="stres">14sep1971   25dec1976      .      .    .     0 </span>|
+  5. | <span class="stres">29sep1971   25dec1978      .      .    .     0 </span>|
      |------------------------------------------------|
-  6. | <span class="stres">16sep1971   23mar1973      .      .    .     0 </span>|
-  7. | <span class="stres">09jul1971   07jan1996   3464   5289    0     1 </span>|
-  8. | <span class="stres">01oct1971   31dec2003   3380   5205    0     1 </span>|
-  9. | <span class="stres">04jun1971   25jun1971      .      .    .     0 </span>|
- 10. | <span class="stres">02mar1971   03aug1976      .      .    .     0 </span>|
+  6. | <span class="stres">21jul1971   23jul1971      .      .    .     0 </span>|
+  7. | <span class="stres">28oct1971   31dec2003   3353   5178    0     1 </span>|
+  8. | <span class="stres">31dec1971   24may1973      .      .    .     0 </span>|
+  9. | <span class="stres">09mar1971   03dec1971      .      .    .     0 </span>|
+ 10. | <span class="stres">05jan1971   17oct1978      .      .    .     0 </span>|
      +------------------------------------------------+
 
 <span class="stinp">. list diagmdy finmdy _t0 _t _d _st in 130100/130110 </span>
@@ -333,19 +333,19 @@ obs. time interval:  <span class="stres">(origin, finmdy]</span>
         +----------------------------------------------+
         | <span class="stres">  diagmdy      finmdy   _t0    _t   _d   _st </span>|
         |----------------------------------------------|
-130100. | <span class="stres">07nov1985   25oct1992     0    54    0     1 </span>|
-130101. | <span class="stres">10may1985   31dec2003     0   235    0     1 </span>|
-130102. | <span class="stres">08nov1985   11sep1999     0    53    0     1 </span>|
-130103. | <span class="stres">31may1985   31dec2003     0   214    0     1 </span>|
-130104. | <span class="stres">10may1985   17jan1986     0   235    0     1 </span>|
+130100. | <span class="stres">12dec1985   24jun1986     0    19    0     1 </span>|
+130101. | <span class="stres">16oct1985   20oct1997     0    76    0     1 </span>|
+130102. | <span class="stres">02dec1985   31dec2003     0    29    0     1 </span>|
+130103. | <span class="stres">18jun1985   31dec2003     0   196    0     1 </span>|
+130104. | <span class="stres">21oct1985   31dec2003     0    71    0     1 </span>|
         |----------------------------------------------|
-130105. | <span class="stres">21mar1985   22mar1987     0   285    0     1 </span>|
-130106. | <span class="stres">29jul1985   20sep1988     0   155    0     1 </span>|
-130107. | <span class="stres">04apr1985   13mar1988     0   271    0     1 </span>|
-130108. | <span class="stres">15aug1985   16jun1995     0   138    0     1 </span>|
-130109. | <span class="stres">23sep1985   10aug1989     0    99    0     1 </span>|
+130105. | <span class="stres">31jan1985   21nov1990     0   334    0     1 </span>|
+130106. | <span class="stres">17may1985   31dec2003     0   228    0     1 </span>|
+130107. | <span class="stres">12aug1985   03aug1990     0   141    0     1 </span>|
+130108. | <span class="stres">26mar1985   21dec1996     0   280    0     1 </span>|
+130109. | <span class="stres">30oct1985   31dec2003     0    62    0     1 </span>|
         |----------------------------------------------|
-130110. | <span class="stres">04mar1985   31mar1986     0   302    0     1 </span>|
+130110. | <span class="stres">08feb1985   20aug1987     0   326    0     1 </span>|
         +----------------------------------------------+
 
 <span class="stinp">. list diagmdy finmdy _t0 _t _d _st in 180100/180110 </span>
@@ -353,19 +353,19 @@ obs. time interval:  <span class="stres">(origin, finmdy]</span>
         +---------------------------------------------+
         | <span class="stres">  diagmdy      finmdy   _t0   _t   _d   _st </span>|
         |---------------------------------------------|
-180100. | <span class="stres">30aug1990   11dec1998     .    .    .     0 </span>|
-180101. | <span class="stres">05dec1990   31dec2003     .    .    .     0 </span>|
-180102. | <span class="stres">27nov1990   23feb1999     .    .    .     0 </span>|
-180103. | <span class="stres">19oct1990   31dec2003     .    .    .     0 </span>|
-180104. | <span class="stres">18apr1990   02jun1990     .    .    .     0 </span>|
+180100. | <span class="stres">01apr1990   16sep1993     .    .    .     0 </span>|
+180101. | <span class="stres">06aug1990   31dec2003     .    .    .     0 </span>|
+180102. | <span class="stres">27jul1990   16nov1991     .    .    .     0 </span>|
+180103. | <span class="stres">10dec1990   31dec2003     .    .    .     0 </span>|
+180104. | <span class="stres">25may1990   06dec1991     .    .    .     0 </span>|
         |---------------------------------------------|
-180105. | <span class="stres">27feb1990   31dec2003     .    .    .     0 </span>|
-180106. | <span class="stres">11sep1990   19nov1991     .    .    .     0 </span>|
-180107. | <span class="stres">11jul1990   31dec2003     .    .    .     0 </span>|
-180108. | <span class="stres">09may1990   24mar1991     .    .    .     0 </span>|
-180109. | <span class="stres">06nov1990   14jan1992     .    .    .     0 </span>|
+180105. | <span class="stres">16jul1990   31dec2003     .    .    .     0 </span>|
+180106. | <span class="stres">01feb1990   01jul1996     .    .    .     0 </span>|
+180107. | <span class="stres">14jul1990   31dec2003     .    .    .     0 </span>|
+180108. | <span class="stres">30oct1990   10nov1995     .    .    .     0 </span>|
+180109. | <span class="stres">15nov1990   11dec2003     .    .    .     0 </span>|
         |---------------------------------------------|
-180110. | <span class="stres">03apr1990   31dec2003     .    .    .     0 </span>|
+180110. | <span class="stres">12jul1990   31dec2003     .    .    .     0 </span>|
         +---------------------------------------------+
 </samp></pre>
 <h3>II) Net Survival Estimation: LIFE TABLE and STNS</h3>
@@ -407,17 +407,17 @@ obs. time interval:  <span class="stres">(origin, finmdy]</span>
      +-----------------------------------------------------------+
      | <span class="stres">  diagmdy      finmdy    _t0     _t   _d   _st    agediag </span>|
      |-----------------------------------------------------------|
-  1. | <span class="stres">17jun1971   31dec2003   3486   5311    0     1   57.65914 </span>|
-  2. | <span class="stres">21jun1971   11jul1974      .      .    .     0   81.89459 </span>|
-  3. | <span class="stres">15jan1971   13nov1972      .      .    .     0   35.54004 </span>|
-  4. | <span class="stres">01jan1971   12mar1981   3653   3723    1     1   51.46064 </span>|
-  5. | <span class="stres">18may1971   24jul1977      .      .    .     0   59.49076 </span>|
+  1. | <span class="stres">24aug1971   02nov1971      .      .    .     0   65.98494 </span>|
+  2. | <span class="stres">03dec1971   06sep1974      .      .    .     0   33.10883 </span>|
+  3. | <span class="stres">15nov1971   22nov1972      .      .    .     0   89.22382 </span>|
+  4. | <span class="stres">14sep1971   25dec1976      .      .    .     0   66.98699 </span>|
+  5. | <span class="stres">29sep1971   25dec1978      .      .    .     0   64.81588 </span>|
      |-----------------------------------------------------------|
-  6. | <span class="stres">16sep1971   23mar1973      .      .    .     0   49.50856 </span>|
-  7. | <span class="stres">09jul1971   07jan1996   3464   5289    0     1   61.46201 </span>|
-  8. | <span class="stres">01oct1971   31dec2003   3380   5205    0     1   37.24846 </span>|
-  9. | <span class="stres">04jun1971   25jun1971      .      .    .     0   81.20465 </span>|
- 10. | <span class="stres">02mar1971   03aug1976      .      .    .     0   53.87543 </span>|
+  6. | <span class="stres">21jul1971   23jul1971      .      .    .     0   69.55784 </span>|
+  7. | <span class="stres">28oct1971   31dec2003   3353   5178    0     1    54.3436 </span>|
+  8. | <span class="stres">31dec1971   24may1973      .      .    .     0   66.71595 </span>|
+  9. | <span class="stres">09mar1971   03dec1971      .      .    .     0   45.53593 </span>|
+ 10. | <span class="stres">05jan1971   17oct1978      .      .    .     0   85.58795 </span>|
      +-----------------------------------------------------------+
 
 <span class="stinp">. gen agediagindays = agediag*365.25</span>
@@ -429,17 +429,17 @@ obs. time interval:  <span class="stres">(origin, finmdy]</span>
      +----------------------------------------------------------------------+
      | <span class="stres">  diagmdy      finmdy    _t0     _t   _d   _st    agediag   agedia~s </span>|
      |----------------------------------------------------------------------|
-  1. | <span class="stres">17jun1971   31dec2003   3486   5311    0     1   57.65914      21060 </span>|
-  2. | <span class="stres">21jun1971   11jul1974      .      .    .     0   81.89459      29912 </span>|
-  3. | <span class="stres">15jan1971   13nov1972      .      .    .     0   35.54004      12981 </span>|
-  4. | <span class="stres">01jan1971   12mar1981   3653   3723    1     1   51.46064      18796 </span>|
-  5. | <span class="stres">18may1971   24jul1977      .      .    .     0   59.49076      21729 </span>|
+  1. | <span class="stres">24aug1971   02nov1971      .      .    .     0   65.98494      24101 </span>|
+  2. | <span class="stres">03dec1971   06sep1974      .      .    .     0   33.10883      12093 </span>|
+  3. | <span class="stres">15nov1971   22nov1972      .      .    .     0   89.22382      32589 </span>|
+  4. | <span class="stres">14sep1971   25dec1976      .      .    .     0   66.98699      24467 </span>|
+  5. | <span class="stres">29sep1971   25dec1978      .      .    .     0   64.81588      23674 </span>|
      |----------------------------------------------------------------------|
-  6. | <span class="stres">16sep1971   23mar1973      .      .    .     0   49.50856      18083 </span>|
-  7. | <span class="stres">09jul1971   07jan1996   3464   5289    0     1   61.46201      22449 </span>|
-  8. | <span class="stres">01oct1971   31dec2003   3380   5205    0     1   37.24846      13605 </span>|
-  9. | <span class="stres">04jun1971   25jun1971      .      .    .     0   81.20465      29660 </span>|
- 10. | <span class="stres">02mar1971   03aug1976      .      .    .     0   53.87543      19678 </span>|
+  6. | <span class="stres">21jul1971   23jul1971      .      .    .     0   69.55784      25406 </span>|
+  7. | <span class="stres">28oct1971   31dec2003   3353   5178    0     1    54.3436      19849 </span>|
+  8. | <span class="stres">31dec1971   24may1973      .      .    .     0   66.71595      24368 </span>|
+  9. | <span class="stres">09mar1971   03dec1971      .      .    .     0   45.53593      16632 </span>|
+ 10. | <span class="stres">05jan1971   17oct1978      .      .    .     0   85.58795      31261 </span>|
      +----------------------------------------------------------------------+
 </samp></pre>
 <p>Understanding your approach:</br>
@@ -455,21 +455,21 @@ Our focus in the analysis is just five-year calendar period</p>
      +-------------------------------------------------------+
      | <span class="stres">  diagmdy      finmdy    _t0     _t   _d   _st   year </span>|
      |-------------------------------------------------------|
-  1. | <span class="stres">17jun1971   31dec2003   3486   5311    0     1   1971 </span>|
-  2. | <span class="stres">01jan1971   12mar1981   3653   3723    1     1   1971 </span>|
-  3. | <span class="stres">09jul1971   07jan1996   3464   5289    0     1   1971 </span>|
-  4. | <span class="stres">01oct1971   31dec2003   3380   5205    0     1   1971 </span>|
-  5. | <span class="stres">13jul1971   31dec2003   3460   5285    0     1   1971 </span>|
+  1. | <span class="stres">28oct1971   31dec2003   3353   5178    0     1   1971 </span>|
+  2. | <span class="stres">31aug1971   31dec2003   3411   5236    0     1   1971 </span>|
+  3. | <span class="stres">02jun1971   20sep1999   3501   5326    0     1   1971 </span>|
+  4. | <span class="stres">04aug1971   16may1982   3438   3938    1     1   1971 </span>|
+  5. | <span class="stres">24sep1971   01jan1983   3387   4117    1     1   1971 </span>|
      |-------------------------------------------------------|
-  6. | <span class="stres">21jul1971   03nov2002   3452   5277    0     1   1971 </span>|
-  7. | <span class="stres">27jun1971   21jan1984   3476   4591    1     1   1971 </span>|
-  8. | <span class="stres">11aug1971   31dec2003   3431   5256    0     1   1971 </span>|
-  9. | <span class="stres">05feb1971   12dec1984   3618   5059    0     1   1971 </span>|
- 10. | <span class="stres">24sep1971   31jan1981   3387   3417    1     1   1971 </span>|
+  6. | <span class="stres">13jun1971   23oct1985   3490   5246    1     1   1971 </span>|
+  7. | <span class="stres">01mar1971   31oct1983   3594   4627    1     1   1971 </span>|
+  8. | <span class="stres">19mar1971   26jan1988   3576   5401    0     1   1971 </span>|
+  9. | <span class="stres">31dec1971   12sep1982   3289   3908    1     1   1971 </span>|
+ 10. | <span class="stres">11jun1971   31dec2003   3492   5317    0     1   1971 </span>|
      +-------------------------------------------------------+
 
-<span class="stinp">. display 5046-3220</span>
-<span class="stres">1826</span>
+<span class="stinp">. display 5184-3359</span>
+<span class="stres">1825</span>
 
 <span class="stinp">. display %2.0f 365.24*5</span>
 <span class="stres">1826</span>
